<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools"
	tools:ignore="MissingTranslation" >
	<string name="selected_configuration">layout</string>
	<string-array name="timezone_labels">
		<item>"Marshall Islands"</item>
		<item>"Midway Island"</item>
		<item>"Hawaii"</item>
		<item>"Alaska"</item>
		<item>"Pacific Time"</item>
		<item>"Tijuana"</item>
		<item>"Arizona"</item>
		<item>"Chihuahua"</item>
		<item>"Mountain Time"</item>
		<item>"Central America"</item>
		<item>"Central Time"</item>
		<item>"Mexico City"</item>
		<item>"Saskatchewan"</item>
		<item>"Bogota"</item>
		<item>"Eastern Time"</item>
		<item>"Venezuela"</item>
		<item>"Atlantic Time (Barbados)"</item>
		<item>"Atlantic Time (Canada)"</item>
		<item>"Manaus"</item>
		<item>"Santiago"</item>
		<item>"Newfoundland"</item>
		<item>"Brasilia"</item>
		<item>"Buenos Aires"</item>
		<item>"Greenland"</item>
		<item>"Montevideo"</item>
		<item>"Mid-Atlantic"</item>
		<item>"Azores"</item>
		<item>"Cape Verde Islands"</item>
		<item>"Casablanca"</item>
		<item>"London, Dublin"</item>
		<item>"Amsterdam, Berlin"</item>
		<item>"Belgrade"</item>
		<item>"Brussels"</item>
		<item>"Sarajevo"</item>
		<item>"Windhoek"</item>
		<item>"W. Africa Time"</item>
		<item>"Amman, Jordan"</item>
		<item>"Athens, Istanbul"</item>
		<item>"Beirut, Lebanon"</item>
		<item>"Cairo"</item>
		<item>"Helsinki"</item>
		<item>"Jerusalem"</item>
		<item>"Minsk"</item>
		<item>"Harare"</item>
		<item>"Baghdad"</item>
		<item>"Moscow"</item>
		<item>"Kuwait"</item>
		<item>"Nairobi"</item>
		<item>"Tehran"</item>
		<item>"Baku"</item>
		<item>"Tbilisi"</item>
		<item>"Yerevan"</item>
		<item>"Dubai"</item>
		<item>"Kabul"</item>
		<item>"Islamabad, Karachi"</item>
		<item>"Ural'sk"</item>
		<item>"Yekaterinburg"</item>
		<item>"Kolkata"</item>
		<item>"Sri Lanka"</item>
		<item>"Kathmandu"</item>
		<item>"Astana"</item>
		<item>"Yangon"</item>
		<item>"Krasnoyarsk"</item>
		<item>"Bangkok"</item>
		<item>"Beijing"</item>
		<item>"Hong Kong"</item>
		<item>"Irkutsk"</item>
		<item>"Kuala Lumpur"</item>
		<item>"Perth"</item>
		<item>"Taipei"</item>
		<item>"Seoul"</item>
		<item>"Tokyo, Osaka"</item>
		<item>"Yakutsk"</item>
		<item>"Adelaide"</item>
		<item>"Darwin"</item>
		<item>"Brisbane"</item>
		<item>"Hobart"</item>
		<item>"Sydney, Canberra"</item>
		<item>"Vladivostok"</item>
		<item>"Guam"</item>
		<item>"Magadan"</item>
		<item>"Auckland"</item>
		<item>"Fiji"</item>
		<item>"Tonga"</item>
	</string-array>
	<string name="drawer_title_calendar">Calendar</string>
	<string name="drawer_title_taskstree">Tasks Tree</string>
	<string name="drawer_title_reminders">Reminders</string>
	<string name="drawer_title_settings">Settings</string>
	<string name="drawer_title_recyclebin">Recycle Bin</string>
	<string name="fragment_view_task_tree_cab_menu_delete">Delete</string>
	<string name="fragment_view_task_tree_cab_menu_delete_condensed">Delete</string>
	<string name="fragment_view_task_tree_cab_menu_set_active">Set active</string>
	<string name="fragment_edit_label_part_main_textview_label_name">Name:</string>
	<string name="fragment_edit_label_part_main_edittext_label_name_hint">Label name</string>
	<string name="fragment_edit_label_part_main_textview_label_description">Description</string>
	<string name="fragment_edit_label_part_main_header_textview_label_parent">Parent label:</string>
	<string name="fragment_edit_label_part_main_checkbox_label_parent_not_set">Not set</string>
	<string name="fragment_edit_label_part_main_edittext_label_description_hint">Label description</string>
	<string name="fragment_view_contact_part_data_group_header_textview_phone_numbers">Phone numbers</string>
	<string name="fragment_view_contact_part_data_header_textview_phone_cellular">Cellular phone</string>
	<string name="fragment_view_contact_part_data_header_textview_phone_cellular_2">Cellular phone 2</string>
	<string name="fragment_view_contact_part_data_header_textview_fax">Fax</string>
	<string name="fragment_view_contact_part_data_header_textview_fax_work">Working fax</string>
	<string name="fragment_view_contact_part_data_header_textview_phone_work">Working phone</string>
	<string name="fragment_view_contact_part_data_header_textview_phone_work_2">Working phone 2</string>
	<string name="fragment_view_contact_part_data_header_textview_phone_home">Home phone</string>
	<string name="fragment_view_contact_part_data_header_textview_phone_home_2">Home phone 2</string>
	<string name="fragment_view_contact_part_data_group_header_textview_email">Email"</string>
	<string name="fragment_view_contact_part_data_header_textview_email">Email</string>
	<string name="fragment_view_contact_part_data_header_textview_email_personal">Personal email</string>
	<string name="fragment_view_contact_part_data_header_textview_email_personal_2">Personal email 2</string>
	<string name="fragment_view_contact_part_data_header_textview_email_work">Working email</string>
	<string name="fragment_view_contact_part_data_header_textview_email_work_2">Working email 2</string>
	<string name="fragment_view_contact_part_data_group_header_textview_internet_communication">Internet communication</string>
	<string name="fragment_view_contact_part_data_header_textview_icq">ICQ</string>
	<string name="fragment_view_contact_part_data_header_textview_facebook">Facebook</string>
	<string name="fragment_view_contact_part_data_header_textview_mail_agent">Mail agent</string>
	<string name="fragment_view_contact_part_data_header_textview_qip">QIP</string>
	<string name="fragment_view_contact_part_data_header_textview_msn">MSN</string>
	<string name="fragment_view_contact_part_data_header_textview_google_talk">Google Talk</string>
	<string name="fragment_view_contact_part_data_header_textview_live_journal">Live Journal</string>
	<string name="fragment_view_contact_part_data_header_textview_personal_site">Personal site</string>
	<string name="fragment_view_contact_part_data_header_textview_personal_site_2">Personal site 2</string>
	<string name="fragment_view_contact_part_data_header_textview_skype">Skype</string>
	<string name="fragment_view_contact_part_data_header_textview_twitter">Twitter</string>
	<string name="fragment_view_contact_part_data_header_textview_jabber">Jabber</string>
	<string name="fragment_view_contact_part_data_group_header_textview_addresses_and_requisites">Addresses and requisites</string>
	<string name="fragment_view_contact_part_data_header_textview_address">Address</string>
	<string name="fragment_view_contact_part_data_header_textview_address_2">Address 2</string>
	<string name="fragment_view_contact_part_data_header_textview_legal_address">Legal address</string>
	<string name="fragment_view_contact_part_data_header_textview_company">Company</string>
	<string name="fragment_view_contact_part_data_header_textview_occupation">Job title</string>
	<string name="fragment_view_contact_part_data_group_header_textview_own_fields">Own fields</string>
	<string name="fragment_view_contact_part_data_header_textview_field_1">Field 1</string>
	<string name="fragment_view_contact_part_data_header_textview_field_2">Field 2</string>
	<string name="fragment_view_contact_part_data_header_textview_field_3">Field 3</string>
	<string name="fragment_view_contact_part_data_header_textview_field_4">Field 4</string>
	<string name="fragment_view_contact_part_data_header_textview_field_5">Field 5</string>
	<string name="fragment_view_contact_part_data_header_textview_field_6">Field 6</string>
	<string name="pref_category_default_settings_for_new_reminder">Default settings for new reminder</string>
	<string name="preference_key_sync_policy">preference_key_sync_policy</string>
	<string name="preference_key_mark_sync_needed">preference_key_mark_sync_needed</string>
	<string name="pref_title_sync_policy">Data synchronization policy:</string>
	<string name="pref_title_mark_sync_needed">When to mark data need to be synchronized?</string>
	<string name="pref_title_sync_settings_force_sync">Force sync</string>
	<string name="pref_description_sync_settings_force_sync">Tap here to force sync</string>
	<string name="pref_title_sync_on_cellular_internet">Sync on cellular internet</string>
	<string name="preference_key_sync_on_cellular_internet">preference_key_sync_on_cellular_internet</string>
	<string name="pref_title_alarm_method">Alarm method to preselect for new reminders:</string>
	<string name="pref_title_reminder_time_mode">What time should be selected for new reminders?</string>
	<string name="pref_title_reminders_popup_window_displaying_duration">Reminder’s popup window displaying duration:</string>
	<string name="pref_dialog_title_reminders_popup_window_displaying_duration">Reminder’s popup window displaying duration, %1$s:</string>
	<string name="pref_title_automatic_snooze_duration">Automatic snooze duration:</string>
	<string name="pref_dialog_title_automatic_snooze_duration">Automatic snooze duration, %1$s:</string>
	<string name="pref_title_automatic_snoozes_max_count">Max automatic snoozes:</string>
	<string name="preference_key_alarm_method">preference_key_alarm_method</string>
	<string name="preference_key_reminder_time_mode">preference_key_reminder_time_mode</string>
	<string name="preference_key_ringtone_fade_in_time">preference_key_ringtone_fade_in_time</string>
	<string name="pref_title_ringtone_fade_in_time">Ringtone fade in duration:</string>
	<string name="pref_dialog_title_ringtone_fade_in_time">Ringtone fade in duration, %1$s:</string>
	<string name="preference_key_reminders_popup_window_displaying_duration">preference_key_reminders_popup_window_displaying_duration</string>
	<string name="preference_key_automatic_snooze_duration">preference_key_automatic_snooze_duration</string>
	<string name="preference_key_automatic_snoozes_max_count">preference_key_automatic_snoozes_max_count</string>
	<string name="preference_key_alarm_ringtone">preference_key_alarm_ringtone</string>
	<string name="preference_key_notification_ringtone">preference_key_notification_ringtone</string>
	<string name="pref_title_alarm_ringtone">Default ringtone for reminder going off with popup window:</string>
	<string name="pref_title_notification_ringtone">Default ringtone for reminder going off with notification at the status bar:</string>
</resources>