<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	<biz.advancedcalendar.activities.MyListPreference
		android:defaultValue="@integer/sync_policy_default_value"
		android:entries="@array/sync_policy_titles_array"
		android:entryValues="@array/sync_policy_values_array"
		android:key="@string/preference_key_sync_policy"
		android:title="@string/pref_title_sync_policy" />
	<biz.advancedcalendar.activities.MyListPreference
		android:defaultValue="@integer/mark_sync_needed_default_value"
		android:entries="@array/mark_sync_needed_titles_array"
		android:entryValues="@array/mark_sync_needed_values_array"
		android:key="@string/preference_key_mark_sync_needed"
		android:title="@string/pref_title_mark_sync_needed" />
	<CheckBoxPreference
		android:defaultValue="@bool/sync_on_cellular_internet"
		android:key="@string/preference_key_sync_on_cellular_internet"
		android:title="@string/pref_title_sync_on_cellular_internet" />
	<Preference
		android:key="force_sync"
		android:summary="@string/pref_description_sync_settings_force_sync"
		android:title="@string/pref_title_sync_settings_force_sync" >
	</Preference>
</PreferenceScreen>