<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<group
		android:id="@+id/group_feature"
		android:checkableBehavior="single" >
		<item
			android:id="@+id/drawer_item_calendar"
			android:icon="@drawable/ic_date_range_black_24dp"
			android:title="@string/drawer_title_calendar"/>
		<item
			android:id="@+id/drawer_item_taskstree"
			android:icon="@drawable/ic_view_list_black_24dp"
			android:title="@string/drawer_title_taskstree"/>
		<item
			android:id="@+id/drawer_item_reminders"
			android:icon="@drawable/ic_alarm_black_24dp"
			android:title="@string/drawer_title_reminders"/>
	</group>
	<group
		android:id="@+id/group_settings"
		android:checkableBehavior="single" >
		<item
			android:id="@+id/drawer_item_settings"
			android:icon="@drawable/ic_settings_black_24dp"
			android:title="@string/drawer_title_settings"/>
		<item
			android:id="@+id/drawer_item_recyclebin"
			android:icon="@drawable/ic_delete_black_24dp"
			android:title="@string/drawer_title_recyclebin"/>
	</group>
</menu>